# serial-monitor

./: .gitignore  LICENSE  PRD_Serial_Monitor.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: build.yml
src/: command-input.ts  connection.ts  filter.ts  flash-api.ts  flash-panel.ts  main.ts  serial-api.ts  styles.css  tab-manager.test.ts  tab-manager.ts  terminal.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  flash.rs  lib.rs  main.rs  serial.rs  state.rs
