[package]
name = "serial-monitor"
version = "1.0.0"
edition = "2021"

[lib]
name = "serial_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4"
tokio = { version = "1", features = ["sync", "time", "rt-multi-thread", "fs", "io-util"] }
